logs/mebo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/mebo'...
Compiling './lib/python3.5/site-packages/mebo/mebo.py'...
***   File "./lib/python3.5/site-packages/mebo/mebo.py", line 104
    url = f'rtsp://{self.ip}/streamhd/'
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mebo/stream'...
Compiling './lib/python3.5/site-packages/mebo/stream/decode.py'...
***   File "./lib/python3.5/site-packages/mebo/stream/decode.py", line 30
    raise ValueError(f'{d} must be in the range [{m},{M}]')
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mebo/stream/rtp.py'...
***   File "./lib/python3.5/site-packages/mebo/stream/rtp.py", line 75
    return f'{self.sdp.profile};unicast;client_port={self.media_port}-{self.rtcp_port}'
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mebo/stream/rtsp.py'...
***   File "./lib/python3.5/site-packages/mebo/stream/rtsp.py", line 31
    yield f'{header}: {value}'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mebo/stream/session.py'...
***   File "./lib/python3.5/site-packages/mebo/stream/session.py", line 68
    username = f'Digest username="{self._username}"'
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mebo-0.1.0.dev4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
